@@ -18,7 +18,7 @@
  * along with this library; if not, write to the Free Software Foundation, 
  * Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
  */
- 
+
 package org.jnode.fs.command;
 
 import javax.naming.NameNotFoundException;
@@ -50,21 +50,19 @@ public class FormatCommand {
     static final OptionArgument TYPE = new OptionArgument("action",
             "Type parameter",
             new OptionArgument.Option[] { new OptionArgument.Option("-t",
-                    "Specify fs type")});
+                    "Specify fs type") });
 
     static final OptionArgument FS = new OptionArgument("fstype",
             "File system type", new OptionArgument.Option[] {
                     new OptionArgument.Option("fat16", "FAT 16 filesystem"),
                     new OptionArgument.Option("fat12", "FAT 12 filesystem"),
-                    new OptionArgument.Option("ext2",  "EXT2 filesystem"),
-					});
-    
+                    new OptionArgument.Option("ext2", "EXT2 filesystem"), });
+
     static final OptionArgument BS_VAL = new OptionArgument("blocksize",
-    		"block size for ext2 filesystem", new OptionArgument.Option[] {
-    			new OptionArgument.Option("1","1Kb"),
-    			new OptionArgument.Option("2","2Kb"),
-    			new OptionArgument.Option("4","4Kb"),				
-				});
+            "block size for ext2 filesystem", new OptionArgument.Option[] {
+                    new OptionArgument.Option("1", "1Kb"),
+                    new OptionArgument.Option("2", "2Kb"),
+                    new OptionArgument.Option("4", "4Kb"), });
 
     static final DeviceArgument ARG_DEVICE = new DeviceArgument("device-id",
             "the device to print informations about");
@@ -73,15 +71,17 @@ public class FormatCommand {
 
     static final Parameter PARAM_FS = new Parameter(FS, Parameter.MANDATORY);
 
-    static final Parameter PARAM_BS_VAL = new Parameter(BS_VAL, Parameter.OPTIONAL);
-    
+    static final Parameter PARAM_BS_VAL = new Parameter(BS_VAL,
+            Parameter.OPTIONAL);
+
     static final Parameter PARAM_DEVICE = new Parameter(ARG_DEVICE,
             Parameter.MANDATORY);
 
     public static Help.Info HELP_INFO = new Help.Info("format",
             new Syntax[] { new Syntax(
                     "Format a block device with a specified type",
-                    new Parameter[] { PARAM_TYPE, PARAM_FS, PARAM_DEVICE, PARAM_BS_VAL})});
+                    new Parameter[] { PARAM_TYPE, PARAM_FS, PARAM_DEVICE,
+                            PARAM_BS_VAL }) });
 
     public static void main(String[] args) throws SyntaxErrorException {
         try {
@@ -91,11 +91,11 @@ public class FormatCommand {
             String FSType = FS.getValue(cmdLine).intern();
             Integer bsize;
             try {
-            	bsize = Integer.valueOf(BS_VAL.getValue(cmdLine));
-            }catch(NumberFormatException nfe) {
-				bsize = new Integer(4);
-        	}
-            
+                bsize = Integer.valueOf(BS_VAL.getValue(cmdLine));
+            } catch (NumberFormatException nfe) {
+                bsize = new Integer(4);
+            }
+
             String fsTypeName;
             Object params;
 
@@ -109,10 +109,9 @@ public class FormatCommand {
                 fsTypeName = FatFileSystemType.NAME;
                 params = new Integer(fatSize);
             } else if (FSType == "ext2") {
-            	fsTypeName = Ext2FileSystemType.NAME;
-            	params = bsize;
-            }
-            	else
+                fsTypeName = Ext2FileSystemType.NAME;
+                params = bsize;
+            } else
                 throw new FileSystemException(
                         "Unsupported FS by format command");
 
@@ -121,7 +120,7 @@ public class FormatCommand {
             dm = (DeviceManager) InitialNaming.lookup(DeviceManager.NAME);
 
             Device dev = dm.getDevice(device);
-            FileSystemService fileSystemService = (FileSystemService) InitialNaming
+            FileSystemService fileSystemService = InitialNaming
                     .lookup(FileSystemService.NAME);
             FileSystemType type = fileSystemService
                     .getFileSystemTypeForNameSystemTypes(fsTypeName);
